RESOLVED FIXED212801
URLs clicked on from -[WKWebView _showSafeBrowsingWarningWithURL:title:warning:details:completionHandler:] are ignored
https://bugs.webkit.org/show_bug.cgi?id=212801
Summary URLs clicked on from -[WKWebView _showSafeBrowsingWarningWithURL:title:warnin...
Richard Houle
Reported 2020-06-04 23:29:35 PDT
Created attachment 401122 [details] Proposed fix For more information about the Safari specific issue, please read <rdar://problem/63027631>.
Attachments
Proposed fix (3.65 KB, patch)
2020-06-04 23:29 PDT, Richard Houle
no flags
Proposed fix V2 (4.65 KB, patch)
2020-06-08 11:13 PDT, Richard Houle
no flags
Proposed fix V3 (5.74 KB, patch)
2020-06-08 11:30 PDT, Richard Houle
no flags
Proposed fix V4 (7.00 KB, patch)
2020-06-08 11:36 PDT, Richard Houle
no flags
Alexey Proskuryakov
Comment 1 2020-06-07 13:48:42 PDT
Comment on attachment 401122 [details] Proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=401122&action=review > Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:-2155 > -- (void)_showSafeBrowsingWarningWithTitle:(NSString *)title warning:(NSString *)warning details:(NSAttributedString *)details completionHandler:(void(^)(BOOL))completionHandler This changes and removes SPI, will it break using ToT WebKit with shipping Safari?
Richard Houle
Comment 2 2020-06-07 14:51:29 PDT
It will. I will submit a modified patch that keeps compatibility with shipping Safari.
Richard Houle
Comment 3 2020-06-08 11:13:32 PDT
Created attachment 401350 [details] Proposed fix V2
Alex Christensen
Comment 4 2020-06-08 11:18:21 PDT
Comment on attachment 401350 [details] Proposed fix V2 You should use WK_MAC_TBA and WK_IOS_TBA in the WK_API_AVAILABLE macros. You should also add a ChangeLog entry with the change.
Richard Houle
Comment 5 2020-06-08 11:30:17 PDT
Created attachment 401351 [details] Proposed fix V3
Alex Christensen
Comment 6 2020-06-08 11:31:06 PDT
You need to change the file Source/WebKit/ChangeLog
Richard Houle
Comment 7 2020-06-08 11:36:50 PDT
Created attachment 401352 [details] Proposed fix V4
EWS
Comment 8 2020-06-08 12:09:47 PDT
Committed r262732: <https://trac.webkit.org/changeset/262732> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401352 [details].
Radar WebKit Bug Importer
Comment 9 2020-06-08 12:10:21 PDT
Note You need to log in before you can comment on or make changes to this bug.