Links in NSAttributedString passed to -[WKWebView _showSafeBrowsingWarningWithURL:title:warning:details:completionHandler:] are ignored https://bugs.webkit.org/show_bug.cgi?id=212801 <rdar://problem/63027631>

Patch by Richard Houle <rhoule@apple.com> on 2020-06-08
Reviewed by Alex Christensen.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _showSafeBrowsingWarningWithTitle:warning:details:completionHandler:]): Call the new detailsWithLinks
implementation, asserting if an URL is non nil.
(-[WKWebView _showSafeBrowsingWarningWithURL:title:warning:details:completionHandler:]): Ditto.
(-[WKWebView _showSafeBrowsingWarningWithURL:title:warning:detailsWithLinks:completionHandler:]): Pass the URL to
the completion handler when appropriate.
* UIProcess/API/Cocoa/WKWebViewPrivate.h:

Canonical link: https://commits.webkit.org/225728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262732 268f45cc-cd09-0410-ab3c-d52691b4dbfc